Lista de mesas y formulario para agregar(no funciona aún)

--- a/src/main/resources/templates/mesas/mesaform.html
+++ b/src/main/resources/templates/mesas/mesaform.html
@@ -48,7 +48,7 @@
         <input type="checkbox" name="horaFeliz"><br>
     </fieldset>
 
-    <button type="submit">Guardar Mesa y Horario</button>
+    <button type="submit">Guardar</button>
 </form>
 </body>
 </html>
